# tree-sitter-dex

./: .editorconfig  .gitignore  Cargo.toml  Makefile  Package.swift  grammar.js  package.json  pyproject.toml  setup.py
bindings/go/: binding.go
bindings/python/tree_sitter_dex/: binding.c
bindings/swift/TreeSitterDexTests/: TreeSitterDexTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json
tree-sitter-dex/: CMakeLists.txt  binding.gyp  go.mod  grammar.js  tree-sitter.json
tree-sitter-dex/bindings/c/: tree-sitter-dex.pc.in
tree-sitter-dex/bindings/c/tree_sitter/: tree-sitter-dex.h
tree-sitter-dex/bindings/go/: binding_test.go
tree-sitter-dex/bindings/node/: binding.cc  index.js
tree-sitter-dex/bindings/python/tests/: test_binding.py
tree-sitter-dex/bindings/python/tree_sitter_dex/: __init__.py
tree-sitter-dex/bindings/rust/: build.rs  lib.rs
tree-sitter-dex/src/: grammar.json  node-types.json  parser.c
tree-sitter-dex/test/corpus/: oneEvent.txt  oneEventLotsOfNewlines.txt  oneEventNoNewline.txt  textCommands.txt  twoComments.txt  twoEvents.txt
